--- a/index.css
+++ b/index.css
@@ -81,7 +81,7 @@
 .res-card:hover {
   cursor: pointer;
   border-radius: 10px;
-  width: 255px;
+  width: 271px;
   /* border: 1px solid rgba(239, 192, 204, 0.544); */
 }
 .res-card-details {
@@ -96,10 +96,7 @@
   padding: 3px;
   border-radius: 10px;
 }
-.res-card-details img {
-  overflow-clip-margin: content-box;
-  overflow: clip;
-}
+
 .search-field {
   padding: 10px;
   display: flex;
@@ -158,4 +155,15 @@
   font-size: 21px;
   background-color: transparent;
   cursor: pointer;
+}
+.menu-items {
+  list-style-type: none;
+}
+.link-btn {
+  text-decoration: none;
+  color: black;
+}
+.header-link {
+  text-decoration: none;
+  color: whitesmoke;
 }
